Move 'Interpolate' checkbox and fix wrapping height

--- a/css/app.css
+++ b/css/app.css
@@ -623,17 +623,10 @@ thumbnail-slider img {
     padding: 5px 8px;
 }
 
-.checkbox-settings {
-    float: left;
-    width: 100%;
-    height: 30px;
-    margin-left: 10px;
-    margin-top: 8px;
-    margin-bottom: 0px;
-}
 .checkbox-settings div {
     float: left;
     margin-right: 10px;
+    height: 30px;
 }
 
 #panel-tabs li a {
